@@ -19,6 +19,9 @@ GNU findutils NEWS - User visible changes.      -*- outline -*- (allout)
   The find.1 man page and the Texinfo manual now show environment variables
   in a consistent style. [#59963]
 
+  The output of 'find --help' now reads better.
+
+
 * Noteworthy changes in release 4.8.0 (2020-01-09) [stable]
 
 ** Changes in xargs
